--- a/231108_aufgabe/index.html
+++ b/231108_aufgabe/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hausübung</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     
-    <header id="output_image"></header>
+    <img id="output_image"></img>
     <h1 id="output_title"></h1>
 
     <script src="js/script.js"></script>
