--- a/231115_progbasics/index.html
+++ b/231115_progbasics/index.html
@@ -8,6 +8,12 @@
 <body>
     
     <div>
+        <label for="anzahl">Gib hier die Anzahl der Gutscheinkarten ein:</label>
+        <input id="anzahl" type="number"><br><br>
+        <button onclick="start();">Erstelle Gutscheine</button>
+    </div>
+
+    <div>
         <div class="container">
             <img id="image">
             <h2 id="title"></h2>
