--- a/231115_progbasics/index.html
+++ b/231115_progbasics/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPAR Gutscheine</title>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/script.js" ></script>
 </head>
 <body>
     
@@ -17,18 +17,7 @@
         <input id="anzahl" type="number">
         </div>
         <button onclick="start()">Erstelle Gutscheine</button>
-        
     </div>
-
-    <div>
-        <div class="container">
-            <img id="image">
-            <h2 id="title"></h2>
-            <p id="description"></p>
-        </div>
-    </div>
-
-    <script src="js/script.js" ></script>
 
 </body>
 </html>
